--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -12,5 +12,22 @@
 }
 .image-src{
     border-radius: 50%;
-    border: 4px solid #41b883;
+    padding: 5px;
+    border: 4px solid rgba(65,184,131,0);
+    box-sizing: content-box;
+    animation: spread 2s linear infinite;
+
+}
+@keyframes spread {
+    0% {
+        padding: 5px;
+        border-color: rgba(65,184,131,0)
+    }
+    10%{
+    border-color: rgba(65,184,131,1)
+    }
+    100% {
+        padding: 20px;
+        border-color: rgba(65,184,131,0)
+    }
 }
