--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -4,30 +4,15 @@
     --vp-home-hero-name-background: linear-gradient( 135deg, #41b883 10%, #5486ee 100%);
     /* 图片背景 */
     --vp-home-hero-image-background-image: linear-gradient( 135deg, #ffbb00 10%, #0083ff 100%);
-    --vp-home-hero-image-filter: blur(150px);
+    --vp-home-hero-image-filter: blur(110px);
 }
 .logo{
     border: 1px solid gray;
     border-radius: 50%;
 }
 .image-src{
-    border-radius: 50%;
-    padding: 5px;
-    border: 4px solid rgba(65,184,131,0);
     box-sizing: content-box;
-    animation: spread 2s linear infinite;
-
-}
-@keyframes spread {
-    0% {
-        padding: 5px;
-        border-color: rgba(65,184,131,0)
-    }
-    10%{
-    border-color: rgba(65,184,131,1)
-    }
-    100% {
-        padding: 20px;
-        border-color: rgba(65,184,131,0)
-    }
+    border-radius: 50%;
+    border: 3px solid rgba(0,0,0,0);
+    outline: rgba(65,184,131,1) solid 4px;
 }
