--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -7,8 +7,7 @@
     --vp-home-hero-image-filter: blur(110px);
 }
 .logo{
-    border: 1px solid gray;
-    border-radius: 50%;
+    transform: translateY(-2px);
 }
 .image-src{
     box-sizing: content-box;
